src/scss/main.scss
/* ... */
/* EDITABLE */
.editable:hover {
    cursor: pointer;
}

.comment-header {
    background-color: $verylightgray;
}

/* highlight on hover: for editable/malleable elements
 * it's $elabblue but less opaque
 */
.hl-hover:hover {
    background-color: rgba(41, 174, 185, 0.5);
}

.hl-hover-gray:hover {
    background-color: $verylightgray;
}

#commentsCreateArea {
    border-radius: 5px;
    margin: 10px 0;
    padding: 20px;
    width: 100%;
}

/* END COMMENTS */

/* TITLE */
/* add several rules for the word-wrap, see https://stackoverflow.com/a/36555643 */
.title {
    font-size: 160%;
    hyphens: auto;
    margin: 0 20px 0 0;
    overflow-wrap: break-word;
    padding-left: 20px;
    word-break: break-all;
    word-wrap: break-word;

    a {
        color: $maingray;

        &:hover {
            color: $elabblue !important;
            transition-duration: 500ms;
        }
    }
}

.overflow-break-word {
    overflow-wrap: break-word;
}

.item-date {
    color: $maingray;
    padding: 0 5px;
}

.smallgray {
    color: $lightgray;
    font-size: 80%;
}

/* ucp.php */
#currpass {
    background-color: $lightblue;
    border: 1px solid $elabblue;
}

/* title on editXP */
#title_input {
    margin: 0 0 15px;
    width: 100%;
}

.maingray {
    color: $maingray;
}

/* elabid */
.elabid {
    color: $maingray;
    overflow-wrap: break-word;
}

.thumbnail {
    overflow-wrap: break-word;
}

/* TAGS */
.tag {
    border: 1px solid $maingray;
    border-radius: 5px;
    color: $maingray;
    font: bold 13px Verdana, Arial, Helvetica, sans-serif;
    padding: 2px 5px;

}

/* print only the main div */
@media print {
    /* overwrite bootstrap defaults
     * https://stackoverflow.com/a/53232790
     */
    body {
        min-width: 0 !important;
    }

    /* don't print all that stuff */
    nav,
    footer,
    #menu,
    #filesdiv,
    #commentsDiv,
    #withSelected,
    .item-info > .clickable,
    .real-container > span,
    .real-container > hr,
    .real-container > form,
    .elab-tooltip,
    .col-md-10,
    .col-md-2,
    .smallgray,
    .page-buttons {
        display: none !important;
    }

    .container {
        min-width: 0 !important;
        width: auto;
    }

    .real-container {
        margin: auto;
        padding: 0;
    }

    .real-container::after {
        content: 'Powered by eLabFTW ❤ www.elabftw.net';
        display: block;
        margin-top: 0.5rem;
        text-align: center;
    }

    .real-container .row:last-child {
        display: block;
        margin-top: 0.5rem;
    }

    .real-container .row:last-child .col-6 {
        max-width: 100%;
        padding: 0;
    }

    .elabid {
        text-align: left;
    }

    .title,
    .item-next,
    .item-info {
        padding-left: 5px !important;
    }

    .title a {
        text-decoration: none !important;
    }

    .item {
        background-color: #fff;
        font-size: 14px;
        line-height: normal;
        margin: 0;
        margin-top: 2px;
        padding: 5px;
    }

    #itemList {
        display: block;
    }

    #itemList > div {
        display: block;
        max-width: 95% !important;
    }

    section > div {
        margin: 0 !important;
        padding: 5px;
        width: 100% !important;
    }

    #body_view {
        border: 0;
    }

    #itemList section {
        break-inside: avoid;
    }
}

// raise above .viewer-ove
.thumbnail > .dropdown {
    position: relative;
    z-index: 10;
}

/* eye overlay for uploaded file icons */
.eye-overlay {
    display: block;
    position: relative;
}

.eye-overlay:hover::after {
    background-color: $maingray;
    color: $white;
    content: '\f06e';
    display: block;
    font-family: 'Font Awesome 6 Free';
    font-size: 3em;
    font-weight: 900;
    left: 50%;
    margin-left: -33px; // half width
    position: absolute;
    text-align: center;
    top: 37px;
    width: 66px;
}

/* fix for 3Dmoljs uploaded files */
.file-uploaded {
    height: 250px;
    width: 100%;
}

/* fix dropzone css */
.dropzone {
    border: 1px solid #fff;
    border-radius: 5px;
}

.dropzone:hover {
    border: 1px solid $elabblue;
    border-radius: 5px;
}

/* doodle canvas */
.doodle {
    border: 1px solid $bordersgray;
    border-radius: 5px;
    display: block;
    margin: 10px 0;
}

#doodleStrokeWidthContainer {
    align-items: center;
    display: flex;
}

/* don't register clicks with the fontawesome icons
 * this way the click event is registered by the parent and all is well
 */
.far,
.fas,
.fab, {
    pointer-events: none;
}

.clickable:hover,
[data-action] {
    cursor: pointer;
}

/* trash icon is red on hover */
.fa-trash-alt:hover {
    color: $darkred;
    transition: color 0.8s ease;
}

/* font awesome icons color */
.far,
.fas,
.fab {
    color: $maingray;
}

.fa-bell.active {
    color: $elabblue;
}

/* for icons such as pin */
.grayed-out {
    color: $lightgraybutnottoolight;
}

/* caption for tinymce */
.image {
    background: #f5f2f0;
    border: 1px solid $maingray;
    display: inline-block;
    margin: 0 2px 0 1px;
}

.image img {
    margin: 8px 8px 0;
}

.image figcaption {
    margin: 6px 8px;
    text-align: center;
}

/* make the markdown editor full width */
.markdown-textarea {
    width: 100%;
}

/* stylelint-disable selector-no-qualifying-type */
input[type='color'] {
    padding: 5px 10px;
}

.user-badge {
    border: 1px solid #c0c0c0;
    border-radius: 5px;
    font-size: 110%;
    margin-right: 5px;
    padding: 5px;
}

.color-white {
    color: #fff;
}

/* give the togglePassword some borders like input */
.input-border {
    border: 1px solid #ced4da;
}

/* bring the search and user menu a bit more on the left
 * this is the only way I found that works
 * adding row/columns will mess up the left alignment of the navbar
 */
#main-nav {
    background-color: inherit;

    @media (min-width: 992px) {
        height: 43px;
    }
}
/* ... */

